# bidtrack

./: .gitignore  README.md  alembic.ini  bidtrack.db  pyproject.toml  test_cascade_delete.py  test_item_model.db  test_item_model.py  test_quote_link_feature.py
alembic/: env.py
alembic/versions/: 12e92d371afd_create_initial_bidding_and_item_tables.py  3c5b55b7782b_remove_unique_constraint_from_item_code.py  621d0e3f2702_update_item_name_non_nullable.py  6c5c73b24f7d_update_item_model.py  e0fb392ca490_initial_setup_of_tables.py  manual_001_add_link_to_quote.py
src/: alembic.ini  app.py  main.py  repository.py  state.py
src/alembic/versions/: e0fb392ca490_initial_setup_of_tables.py  manual_001_add_link_to_quote.py
src/db/: __init__.py  database.py  models.py  repository.py
src/pages/: analyze_biddings.py  analyze_items.py  manage_bids.py  manage_competitors.py  manage_quotes.py  manage_suppliers.py
src/repositories/: __init__.py  bidding_repository.py  item_repository.py
src/repository/: interface.py  sqlmodel.py
src/services/: core.py  dataframes.py  plotting.py
src/tests/: test_views.py
src/ui/: bid_tab_content.py  bidder_tab_content.py  bidding_tab_content.py  constants.py  dialogs.py  generic_entity_management.py  item_tab_content.py  management_tables_page.py  plotting.py  quote_tab_content.py  supplier_tab_content.py  utils.py  views.py
tests/: conftest.py
tests/repositories/: __init__.py  test_bidding_repository.py  test_item_repository.py
tests/services/: _test_dataframes.py
tests/ui/: test_generic_entity_management.py  test_utils.py
(+12 files in other folders)
