[project]
name = "bidtrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10" # Adjusted Python version
dependencies = [
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "sqlmodel>=0.0.14", # Updated version
    "alembic>=1.13.1", # Added alembic
    "streamlit>=1.45.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0", # Added pytest for testing
]
