[project]
name = "bidtrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "sqlmodel>=0.0.24",
    "streamlit>=1.45.1",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.2.3.250527",
    "plotly-stubs>=0.0.5",
]
