[project]
name = "bidtrack"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "sqlmodel>=0.0.24",
    "streamlit>=1.45.1",
    "alembic>=1.13.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.29.2",
    "pandas-stubs>=2.2.3.250527",
    "plotly-stubs>=0.0.5",
    "pyrefly>=0.17.1",
    "ruff>=0.11.12",
    "ty>=0.0.1a7",
]
